Misc dark mode transitions fixes

--- a/style.css
+++ b/style.css
@@ -91,6 +91,8 @@ nav {
     text-align: center;
     font-size: 25px;
     padding: 20px;
+    color: var(--font);
+    transition: color 0.3s ease-in-out;
 }
 
 .menu-button {
@@ -102,6 +104,7 @@ ul {
     list-style: none;
     width: 300px;
     opacity: 0;
+    background-color: var(--foreground);
     transition: 0.2s ease-in-out;
 }
 
@@ -124,6 +127,7 @@ ul li button {
     text-decoration: none;
     color: var(--font);
     background-color: var(--foreground);
+    transition: 0.3s ease-in-out;
     display: flex;
     padding: 20px 20px;
     position: relative;
@@ -223,7 +227,8 @@ footer {
     padding: 20px 0 0 0;
     text-align: center;
     font-size: 0.8em;
-    background: var(--background);
+    color: var(--font);
+    transition: 0.3s ease-in-out;
 }
 
 .footer-button {
@@ -309,6 +314,7 @@ footer {
 .downloads {
     width: clac(100% - 100px);
     background: var(--foreground);
+    transition: 0.3s ease-in-out;
     border-radius: 50px;
     margin: 0 50px;
     padding: 50px;
@@ -381,6 +387,8 @@ footer {
 
 .rom-name {
     font-size: 1.2em;
+    color: var(--font);
+    transition: 0.3s ease-in-out;
 }
 
 .stats {
